need form - date

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
     <body>
-    <a href="@routes.NeedForm.formNeed()">I Give</a>
+    <a href="@routes.NeedForm.blank()">I Give</a>
         @content
     </body>
 </html>
