--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,9 +10,9 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
     <body>
+
     
     
-   
         @content
         
 		<div id="maincontainer">
@@ -23,7 +23,7 @@
 		<div id="contentcolumn">
 		<div class="innertube">
 			<div class='columnLeft'>
-		    		<a href="@routes.NeedForm.formNeed()"><em>I Give</em></a>
+		    		<a href="@routes.NeedForm.blank()"><em>I Give</em></a>
 	    	</div>
 	    	 <div class='columnRight'>
 	    		<a href="#">I Need</a>
