--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -15,6 +15,14 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
+    	<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    	<script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+<script>
+	$(function() {
+		$( "#datepicker" ).datepicker();
+	});
+</script>
     </head>
     <body>
        @helper.form(action = routes.NeedForm.submit) {
@@ -41,10 +49,12 @@
                 '_label -> "Location", 
                 '_error -> needForm.globalError
             )
-            
-            @inputText(
-                needForm("date"), 
-                '_label -> "Date", 
+			
+			@inputText(
+                needForm("endDate"),
+                '_label -> "Date",
+                '_help -> " please give a date in the future",
+                'id -> "datepicker",
                 '_error -> needForm.globalError
             )
             
