--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,27 +8,95 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/orange-hover.jpg")">
     </head>
     <body>
-<<<<<<< HEAD
-
-    
-    
-=======
-    <a href="@routes.NeedForm.blank()">I Give</a>
->>>>>>> branch 'master' of https://github.com/pinkupdater/Hackathon2012.git
         @content
         
-		<div id="maincontainer">
+<body>
+<div id="topPanel">
+  <ul>
+    <li><a href="http://www.free-css.com/">Contact</a></li>
+    <li><a href="http://www.free-css.com/">Clients</a></li>
+    <li><a href="http://www.free-css.com/">Support</a></li>
+    <li><a href="http://www.free-css.com/">About us</a></li>
+    <li class="active">Home</li>
+  </ul>
+  <a href="http://www.free-css.com/"><img width="230" height="80" border="0" alt="Trial Services" title="Trial Services" src="images/logo.gif"></a>
+  <div id="headerPanelfast">
+    <h2>design</h2>
+    <p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+    <a href="http://www.free-css.com/">&nbsp;</a></div>
+  <div id="headerPanelsecond">
+    <h2>success</h2>
+    <p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+    <a href="http://www.free-css.com/">&nbsp;</a></div>
+  <div id="headerPanelthird">
+    <h2>services</h2>
+    <p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+    <a href="http://www.free-css.com/">&nbsp;</a></div>
+</div>
+<div id="bodyPanel">
+  <h2>About Us</h2>
+  <p>Trial Services is a <span>free, tableless, W3C-compliant</span> web design layout by Template World. This template has been tested and proven compatible with all major browser environments and operating systems. You are free to modify the design to suit your tastes in any way you like. We only ask you to not remove "Design by Template World" and the link http://www.templateworld.com from the footer of the template.</p>
+  <p class="dotline"><img width="1" height="1" alt="" src="images/blank.gif"></p>
+  <p class="capstext">If you are interested in seeing more of our free web template designs feel free to visit our website, Template World. We intend to add at least 25 new free templates in the coming month.</p>
+  <p class="dotline"><img width="1" height="1" alt="" src="images/blank.gif"></p>
+  <p class="more"><a href="http://www.free-css.com/">More</a></p>
+  <h3>Testimonials</h3>
+  <h4>Solutions</h4>
+  <ul>
+    <li><span>Popularised in the 1960s with</span></li>
+    <li><span>The release of Letraset sheets</span></li>
+    <li><span>Containing Lorem Ipsum</span></li>
+    <li><span>Lorem unknownindustry's </span></li>
+    <li><span>Standard dummy text ever </span></li>
+    <li><span>Since the 1500s, when an</span></li>
+    <li>Unknown printer took a galley</li>
+  </ul>
+  <div id="testimonial">
+    <p><span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> Lorem Ipsum has been the.ing essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum</p>
+    <p class="moretwo"><a href="http://www.free-css.com/">More</a></p>
+  </div>
+</div>
+<div id="footerPanel">
+  <div id="footerbodyPanel">
+    <ul>
+      <li><a href="http://www.free-css.com/">Home</a>|</li>
+      <li><a href="http://www.free-css.com/">About us</a> |</li>
+      <li><a href="http://www.free-css.com/">Support</a>|</li>
+      <li><a href="http://www.free-css.com/">Clients</a> |</li>
+      <li><a href="http://www.free-css.com/">Contact</a></li>
+    </ul>
+    <p class="copyright">&copy; trial services all right reaserved</p>
+    <ul class="templateworld">
+      <li>Design By:</li>
+      <li><a href="http://www.templateworld.com">Template World</a></li>
+    </ul>
+    <div id="footerhtmlPanel"><a href="http://validator.w3.org/check?uri=referer">html</a></div>
+    <div id="footercssPanel"><a href="http://jigsaw.w3.org/css-validator/check/referer">css</a></div>
+  </div>
+</div>
+
+
+</body>
+
+
+        
+        
+		<!-- <div id="maincontainer">
 		
 		<div id="topsection"><div class="innertube"><h1>HELP ME</h1></div></div>
 		
 		<div id="contentwrapper">
 		<div id="contentcolumn">
 		<div class="innertube">
-			<div class='columnLeft'>
-		    		<a href="@routes.NeedForm.blank()"><em>I Give</em></a>
-	    	</div>
+			
+				<div id="headerPanelfast">
+					<h2>design</h2>
+					<p>Lorem Ipsum is simply try's standard dummy text ever since the 1500s,Lorem Ipsimply try's </p>
+					<a href="@routes.NeedForm.blank()"><em>I Give</em></a>
+					</div>
 	    	 <div class='columnRight'>
 	    		<a href="#">I Need</a>
 	    	 </div>
@@ -47,6 +115,6 @@
 		
 		<div id="footer"><a href="http://www.dynamicdrive.com/style/">Dynamic Drive CSS Library</a></div>
 		
-		</div>
+		</div> -->
 		</body>
 </html>
