--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,74 @@
+/* CSS Document */
+
+body{background:#fff; color:#0F0F0F; font:15px/20px Arial, Helvetica, sans-serif; margin:32px 0 0; padding:0;}
+div, ul, h1, h2, h3, li, p, img{margin:0; padding:0;}
+ul{list-style-type:none;}
+
+/* header */
+#topsection{
+background: blue;
+height: 90px; /*Height of top section*/
+}
+
+#topsection h1{
+	margin: 0;
+	padding-top: 30px;
+	padding-left:542px;
+	font-size:60px;
+}
+
+/* TOP PANEL*/
+#topPanel{width:762px; height:373px; position:relative; margin:0 auto; padding:0;}
+#topPanel img{width:230px; height:80px; z-index:1; padding:0; position:absolute; margin:0 0 0 21px;}
+/* MENU PANEL*/
+#topPanel ul{display:block; width:732px; height:36px; position:absolute; top:0; right:0; margin:11px 0 0; padding:0 29px 0 0; border-bottom:1px solid #AEAEAE;}
+#topPanel ul li{float:right; font:12px/36px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold;}
+#topPanel ul li a{width:74px; height:36px; display:block; padding:0; color:#555; background:#fff; text-decoration:none; text-align:center; margin:0 1px 0 0; top:0px; left:0px;}
+#topPanel ul li a:hover{width:74px; height:36px; text-decoration:none; background:url(../images/button.gif) no-repeat 0 0 #AEAEAE; color:#fff;}
+#topPanel ul li.active{width:74px; display:block; height:36px; background:url(../images/button.gif) no-repeat 0 0 #AEAEAE; color:#fff; text-align:center; margin:0 1px 0 0;}
+/* HEADER PANEL*/
+#topPanel #headerPanelfast{width:246px; height:263px; position:absolute; top:0; left:0; margin:110px 0 0; padding:0px; background:url(../images/orange-normal.jpg) no-repeat 0 0 #FC5F00; color:#fff;}
+#topPanel #headerPanelfast a{width:246px; height:263px; display:block; text-decoration:none; }
+#topPanel #headerPanelfast a:hover{width:246px; height:263px; background:url(../images/orange-hover.jpg) no-repeat 0 0 #FC5F00; color:#fff; text-decoration:none;}
+#topPanel #headerPanelfast h2{display:block; width:90px; height:47px; margin:54px 0 0 120px; font:28px/28px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; position:absolute; top:0px; left:0px; z-index:1;}
+#topPanel #headerPanelfast p{width:163px; display:block; font:15px/21px Arial, Helvetica, sans-serif; font-weight:bold;  position:absolute; top:0px; left:0px; z-index:1; padding:0;   margin: 130px 50px 0 40px;}
+
+#topPanel #headerPanelsecond{width:246px; height:263px; position:absolute; top:0; left:258px; margin:110px 0 0; padding:0px; background:url(../images/green-normal.jpg) no-repeat 0 0 #FC5F00; color:#fff;}
+#topPanel #headerPanelsecond a{width:246px; height:263px; display:block; text-decoration:none; }
+#topPanel #headerPanelsecond a:hover{width:246px; height:263px; background:url(../images/green-hover.jpg) no-repeat 0 0 #FC5F00; color:#fff; text-decoration:none;}
+#topPanel #headerPanelsecond h2{display:block; width:90px; height:47px; background:none; margin:54px 0 0 85px; font:120px/180px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; padding:0; position:absolute; z-index:1;}
+
+#topPanel #headerPanelthird{width:246px; height:263px; position:absolute; top:0; right:0; margin:110px 0 0; padding:0px; background:url(../images/blue-normal.jpg) no-repeat 0 0 #FC5F00; color:#fff;}
+#topPanel #headerPanelthird a{width:246px; height:263px; display:block; text-decoration:none; }
+#topPanel #headerPanelthird a:hover{width:246px; height:263px; background:url(../images/blue-hover.jpg) no-repeat 0 0 #FC5F00; color:#fff; text-decoration:none;}
+#topPanel #headerPanelthird h2{display:block; width:90px; height:47px; background:none; margin:54px 0 0 93px; font:28px/28px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; padding:0; position:absolute; z-index:1;}
+#topPanel #headerPanelthird p{width:163px; display:block; font:15px/21px Arial, Helvetica, sans-serif; font-weight:bold;  position:absolute; top:0px; left:0px; z-index:1; padding:0;  margin: 130px 50px 0 45px;;}
+/* /TOP PANEL*/
+
+/* BODY PANEL*/
+#bodyPanel{width:762px; height:640px; position:relative; margin:0 auto; padding:0;}
+#bodyPanel h2{ background:#fff; display:block; width:250px; height:50px; margin:0; font:30px/30px Georgia, "Times New Roman", Times, serif; font-weight:normal; padding:4px 0 0 202px; color:#FF7113;}
+#bodyPanel p span{font-weight:bold;}
+#bodyPanel p.more{height:26px; padding:0; background:none; margin:0;}
+#bodyPanel p.more a{width:76px; height:26px; display:block; margin:314px 20px 19px 618px; background:url(../images/more.gif) 0 0 no-repeat #fff; color:#555; text-decoration:none; font:15px/26px "Trebuchet MS",Arial, Helvetica, sans-serif; padding:0 0 0 10px; text-transform:uppercase; position:absolute; top:0px; right:0px;}
+#bodyPanel p.more a:hover{background:url(../images/more.gif) 0 0 no-repeat #fff; color:#216EBD; text-decoration:none;}
+#bodyPanel h3{background:#fff; display:block; width:250px; height:34px; margin:34px 0 12px 0; font:30px/30px Georgia, "Times New Roman", Times, serif; font-weight:normal; padding:0 0 0 20px; color:#FF7113;   text-align: center;}
+#bodyPanel #testimonial{width:283px; height:162px; display:block; background:url(../images/testimonial-bg.gif) 0 0 no-repeat #FFF6DB; padding:32px 33px 0 148px; margin:0 0 0 20px; color:#786321;}
+#bodyPanel #testimonial p{background:none; margin:0; padding:0 0 5px 0;}
+#bodyPanel #testimonial p span{color:#786321 !Important; background:#FFFAED !Important;}
+#bodyPanel p.moretwo{height:26px; padding:0; background:none; margin:0;}
+#bodyPanel p.moretwo a{width:76px; height:26px; display:block; margin:0px 0px 0px 196px; background:url(../images/more2.gif) 0 0 no-repeat #FFF5D6; color:#555; text-decoration:none; font:15px/26px "Trebuchet MS",Arial, Helvetica, sans-serif; text-transform:uppercase; padding:0 0 0 10px; top:0px; right:0px;}
+#bodyPanel p.moretwo a:hover{background:url(../images/more2.gif) 0 0 no-repeat #FFF5D6; color:#216EBD; text-decoration:none;}
+#bodyPanel h4{ background:#fff; width:250px; height:30px; position:absolute; top:361px; right:5px; margin:0; font:30px/30px Georgia, "Times New Roman", Times, serif; font-weight:normal; padding:0px; color:#FF7113;}
+#bodyPanel ul{ padding-top: 50px;}
+#bodyPanel ul li{font:12px/25px Arial, Helvetica, sans-serif; font-weight:normal; background:url(../images/symbol2.gif) 0 8px no-repeat; padding:0 0 0 30px;}
+#bodyPanel ul span{ background:url(../images/dot-line.gif) repeat-x 0 100%; height:25px; display:block;}
+
+.left{float:left; width:50%;}
+
+
+
+
 html, body {
     background-color: #eee;
 }
