--- a/app/views/give/formGive.scala.html
+++ b/app/views/give/formGive.scala.html
@@ -15,6 +15,17 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
+    	<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    	<script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+    	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+    	<script src="@routes.Assets.at("javascripts/location.js")" type="text/javascript"></script>
+ <script>
+	$(function() {
+		$( "#datepicker" ).datepicker();
+	});
+</script>       
+        
     </head>
     <body>
        @helper.form(action = routes.GiveForm.submit) {
@@ -43,8 +54,10 @@
             )
             
             @inputText(
-                giveForm("date"), 
-                '_label -> "Date", 
+                giveForm("endDate"),
+                '_label -> "Date",
+                '_help -> " please give a date in the future",
+                'id -> "datepicker",
                 '_error -> giveForm.globalError
             )
             
