commit out image

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 
-body{background:#fff; color:#0F0F0F; font:15px/20px Arial, Helvetica, sans-serif; margin:32px 0 0; padding:0;}
+body {background:#fff; color:#0F0F0F; font:15px/20px Arial, Helvetica, sans-serif; margin:32px 0 0; padding:0;}
 div, ul, h1, h2, h3, li, p, img{margin:0; padding:0;}
 ul{list-style-type:none;}
 
@@ -33,10 +33,22 @@ height: 90px; /*Height of top section*/
 #topPanel #headerPanelfast h2{display:block; width:90px; height:47px; margin:54px 0 0 120px; font:28px/28px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; position:absolute; top:0px; left:0px; z-index:1;}
 #topPanel #headerPanelfast p{width:163px; display:block; font:15px/21px Arial, Helvetica, sans-serif; font-weight:bold;  position:absolute; top:0px; left:0px; z-index:1; padding:0;   margin: 130px 50px 0 40px;}
 
-#topPanel #headerPanelsecond{width:246px; height:263px; position:absolute; top:0; left:258px; margin:110px 0 0; padding:0px; background:url(../images/green-normal.jpg) no-repeat 0 0 #FC5F00; color:#fff;}
+#topPanel #headerPanelsecond{width:246px; height:263px; position:absolute; top:0; left:258px; margin:110px 0 0; padding:0px; }
 #topPanel #headerPanelsecond a{width:246px; height:263px; display:block; text-decoration:none; }
 #topPanel #headerPanelsecond a:hover{width:246px; height:263px; background:url(../images/green-hover.jpg) no-repeat 0 0 #FC5F00; color:#fff; text-decoration:none;}
-#topPanel #headerPanelsecond h2{display:block; width:90px; height:47px; background:none; margin:54px 0 0 85px; font:120px/180px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; padding:0; position:absolute; z-index:1;}
+#topPanel #headerPanelsecond h2 {
+	background:none;
+    color: blue;
+    display: block;
+    font: bold 171px/74px "Trebuchet MS",Arial,Helvetica,sans-serif;
+    height: 47px;
+    margin: 54px 0 0 70px;
+    padding: 0;
+    position: absolute;
+    text-transform: uppercase;
+    width: 90px;
+    z-index: 1;
+}
 
 #topPanel #headerPanelthird{width:246px; height:263px; position:absolute; top:0; right:0; margin:110px 0 0; padding:0px; background:url(../images/blue-normal.jpg) no-repeat 0 0 #FC5F00; color:#fff;}
 #topPanel #headerPanelthird a{width:246px; height:263px; display:block; text-decoration:none; }
@@ -68,14 +80,8 @@ height: 90px; /*Height of top section*/
 
 
 
+/*css for need form*/
 
-<<<<<<< HEAD
-html, body {
-    background-color: #eee;
-}
-body {
-    padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
-}
 .container > footer p {
     text-align: center; /* center align it with the container */
 }
@@ -149,5 +155,4 @@ body {
 .phone_template, .profile_template {
     display: none;
 }
-=======
->>>>>>> branch 'master' of https://github.com/pinkupdater/Hackathon2012.git
+
