--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,5 +1,4 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
 
 <html>
@@ -29,23 +28,7 @@
 </div>
 <div id="bodyPanel">
   
-  
-  
-<div id="helpLists">
-  <div id="needList" class='left'>
-  <h3>...were needed </h3>
-    <ul>
-    <li>Item1These were receivedThese were receivedThese were receivedThese were receivedThese were receivedThese were received</li>
-    </ul>
-  </div>
-  <div id="giveList" class='left' >
-  <h3>...were received </h4>
-  	<ul>
-    	<li>Item1These were receivedThese were receivedThese were receivedThese were receivedThese were receivedThese were received</li>
-    </ul>
-  </div>
-</div>
-</div>
+@content
 </body>
 		</body>
 </html>
