--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,8 +6,12 @@ ul{list-style-type:none;}
 
 /* header */
 #topsection{
-background: blue;
+background: #4a78d8;
+padding-top: 0;
 height: 90px; /*Height of top section*/
+width: 762px;
+position: relative;
+margin: 0 auto;
 }
 
 #topsection h1{
