--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -51,9 +51,12 @@
                 '_error -> needForm.globalError
             )
             
+            <div id="searchTextField_field" class="clearfix ">
             <label for="searchTextField">Location</label>
-            <input id="searchTextField" type="text" form="myForm"></input>
-            
+            	<div class="input">
+            		<input id="searchTextField" type="text" form="myForm"></input>
+            	</div>
+            </div>
 			 <div id="map_canvas"></div>    
  
 			@inputText(
@@ -75,12 +78,15 @@
                 '_error -> needForm.globalError
             )
             
-			  @inputRadioGroup(
-          		needForm("type"),
-          		options = options("PAID"->"Yes","FREE"->"No"),
-          		'_label -> "Willing to pay?",
-          		'_error -> needForm("gender").error.map(_.withMessage("select gender"))
-            )
+			  <div id="type_field" class="clearfix ">
+				<label for="type">Would you pay for it?</label>
+				<div class="input">
+					<input id="type" type="checkbox" value="PAID" name="type">
+					<span></span>
+					<span class="help-inline"></span>
+					<span class="help-block"></span>
+				</div>
+			</div>
                 
         </fieldset>
         
