--- a/app/views/needList.scala.html
+++ b/app/views/needList.scala.html
@@ -1,5 +1,7 @@
 @(currentPage: models.Page[NeedItem], currentSortBy: String, currentOrder: String, currentFilter: String)
 
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+<script src="@routes.Assets.at("javascripts/location.js")" type="text/javascript"></script>
 @link(newPage:Int, newSortBy:String) = @{
     
     var sortBy = currentSortBy
@@ -27,10 +29,10 @@
 * Helper generating table headers *
 ***********************************@
 
-@main("Need list") {
+@main("Others' Needs") {
 
-    <h1 id="homeTitle">@Messages("I Need", currentPage.getTotalRowCount)</h1>
-
+    <h1 id="homeTitle">@Messages("Others' needs", currentPage.getTotalRowCount)</h1>
+<br/>
     @if(flash.containsKey("success")) {
         <div class="alert-message warning">
             <strong>Done!</strong> @flash.get("success")
@@ -41,7 +43,10 @@
         
         <form action="@link(0, "name")" method="GET">
             <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Search for...">
-            <input type="submit" id="searchsubmit" value="Find other's needs">
+            <input id="searchTextField" type="text"></input>
+            <input type="hidden" name="location" id="location" />
+            <input type="submit" id="searchsubmit" value="Find">
+            <div id="map_canvas"></div>
         </form>
 
     </div>
@@ -54,13 +59,11 @@
         
     } else {
         
-        <table>
-            <tbody>
-
+        <ul>
+           
                 @for(need<- currentPage.getList) {
-                    <tr>
-                        <td>
-                            <b>@need.getName</b><br/>
+           <li>                 
+           <b>@need.getName</b><br/>
                             @if(need.getType.name == "PAID") {
                             	I am willing to pay.<br/>
                             }
@@ -72,12 +75,8 @@
                             @if(need.getDescription != null) {
                             	Additional info: @need.getDescription
                             }
-                        </td>
-                    </tr>
-                }
-
-            </tbody>
-        </table>
+               <br/></li> }
+</ul>
 
         <div id="pagination" class="pagination">
             <ul>
