--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,17 +9,19 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/orange-hover.jpg")">
     </head>
-    <body>
-
 <body>
-<div id="topsection"><div class="innertube"><h1>WE HELP</h1></div></div>
+<div id="banner">
+	<div class=bannerBG>
+		<h1>WE HELP</h1>
+	</div>
+</div>
 <div id="topPanel">
   <div id="headerPanelfast">
   <!--    <h2>i NEED</h2>
     <p>Share your need here</p> -->
     <a href="@routes.NeedForm.blank()">&nbsp;</a></div>
   <div id="headerPanelsecond">
-    <h2>+</h2>
+    <h2>-></h2>
   </div>
   <div id="headerPanelthird">
    <!--   <h2>i GIVE</h2>
