--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -35,6 +35,7 @@
        @helper.form(action = routes.NeedForm.submit, '_id -> "myForm") {
             
 		<input type="hidden" name="location" id="location" />
+		<input type="hidden" name="locationName" id="locationName" />
         
         <fieldset>
             <legend>Add need request</legend>
@@ -55,9 +56,8 @@
             
             <div id="searchTextField_field" class="clearfix ">
             <label for="searchTextField">Location</label>
-
-            	<div class="input">
-            		<input id="searchTextField" type="text" form="myForm"></input>
+				<div class="input">
+            		<input id="searchTextField" type="text" form="needForm" ></input>
             	</div>
             </div>
 			 <div id="map_canvas"></div>    
