--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,23 +1,17 @@
 @(currentPage: models.Page[NeedItem], currentSortBy: String, currentOrder: String, currentFilter: String, page2:models.Page[GiveItem])
 
-@main("Welcome to Play 2.0") {
+@main("We Help") {
 <div id="topPanel">
   <div id="headerPanelfast">
-  <!--    <h2>i NEED</h2>
-    <p>Share your need here</p> -->
+
     <a href="@routes.NeedForm.blank()">&nbsp;</a></div>
-  <div id="headerPanelsecond">
-    <h2>-></h2>
-  </div>
   <div id="headerPanelthird">
-   <!--   <h2>i GIVE</h2>
-    <p>Share your gift here</p> -->
     <a href="@routes.GiveForm.blank()">&nbsp;</a></div>
 </div>
 <div id="bodyPanel">
 
     <div id="helpLists">
-  <div id="needList" class='left'>
+  <div id="needList">
   <h3>...were needed </h3>
     <ul>
     	@for(need<- currentPage.getList) {
@@ -39,7 +33,7 @@
     
     </ul>
   </div>
-  <div id="giveList" class='left' >
+  <div id="giveList" >
   
   <h3>...were received </h4>
   	<ul>
