--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,7 +26,7 @@ ul{list-style-type:none;}
 }
 
 /* TOP PANEL*/
-#topPanel{width:762px; height:373px; position:relative; margin:-96px 412px; padding:0;}
+#topPanel{width:762px; height:373px; position:relative; margin:0 auto; padding:0;}
 #topPanel img{width:230px; height:80px; z-index:1; padding:0; position:absolute; margin:0 0 0 21px;}
 /* MENU PANEL*/
 #topPanel ul{display:block; width:732px; height:36px; position:absolute; top:0; right:0; margin:11px 0 0; padding:0 29px 0 0; border-bottom:1px solid #AEAEAE;}
@@ -35,7 +35,7 @@ ul{list-style-type:none;}
 #topPanel ul li a:hover{width:74px; height:36px; text-decoration:none; background:url(../images/button.gif) no-repeat 0 0 #AEAEAE; color:#fff;}
 #topPanel ul li.active{width:74px; display:block; height:36px; background:url(../images/button.gif) no-repeat 0 0 #AEAEAE; color:#fff; text-align:center; margin:0 1px 0 0;}
 /* HEADER PANEL*/
-#topPanel #headerPanelfast{width:246px; height:263px; position:absolute; top:0; left:0; margin:110px 33px 0; padding:0px; background:url(../images/btnNeed.jpg) no-repeat 0 0 }
+#topPanel #headerPanelfast{width:auto; height:auto; position:absolute; top:0; left:60px; margin:0; padding:0px; background:url(../images/btnNeed.jpg) no-repeat 0 0 }
 #topPanel #headerPanelfast a{width:246px; height:263px; display:block; text-decoration:none; }
 
 #topPanel #headerPanelfast h2{display:block; width:90px; height:47px; margin:54px 0 0 120px; font:28px/28px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; position:absolute; top:0px; left:0px; z-index:1;}
@@ -46,7 +46,7 @@ ul{list-style-type:none;}
 
 #topPanel #headerPanelsecond h2{display:block; width:90px; height:47px; background:none; margin:54px 0 0 85px; font:120px/180px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; padding:0; position:absolute; z-index:1;}
 
-#topPanel #headerPanelthird{width:285px; height:263px; position:absolute; top:0; right:0; margin:110px 0 0; padding:0px; background:url(../images/btnGive.jpg) no-repeat 0 0 }
+#topPanel #headerPanelthird{width:auto; height:auto; position:absolute; top:0; right:60px; margin:0; padding:0px; background:url(../images/btnGive.jpg) no-repeat 0 0 }
 #topPanel #headerPanelthird a{width:246px; height:263px; display:block; text-decoration:none; }
 
 #topPanel #headerPanelthird h2{display:block; width:90px; height:47px; background:none; margin:54px 0 0 93px; font:28px/28px "Trebuchet MS",Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; padding:0; position:absolute; z-index:1;}
