--- a/app/views/giveList.scala.html
+++ b/app/views/giveList.scala.html
@@ -1,5 +1,8 @@
 @(currentPage: models.Page[GiveItem], currentSortBy: String, currentOrder: String, currentFilter: String)
 
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+<script src="@routes.Assets.at("javascripts/location.js")" type="text/javascript"></script>
+
 @link(newPage:Int, newSortBy:String) = @{
     
     var sortBy = currentSortBy
@@ -41,7 +44,10 @@
         
         <form action="@link(0, "name")" method="GET">
             <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Search for...">
-            <input type="submit" id="searchsubmit" value="Find what others give">
+            <input id="searchTextField" type="text" form = "myform"></input>
+            <input type="hidden" name="l" id="location" />
+            <input type="submit" id="searchsubmit" value="Find">
+            <div id="map_canvas"></div>
         </form>
 
     </div>
@@ -70,7 +76,11 @@
                             @if(give.getPhone != null) {
                                  or phone me: @give.getPhone
                             }
-                            .<br/>
+                         	<br/>
+                         	@if(give.getLocationName != null && !give.getLocationName.isEmpty) {
+                            	Location: @give.getLocationName
+                            }
+                           	<br/>
                             @if(give.getDescription != null) {
                             	Additional info: @give.getDescription
                             }
