--- a/app/views/giveList.scala.html
+++ b/app/views/giveList.scala.html
@@ -2,6 +2,7 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
 <script src="@routes.Assets.at("javascripts/location.js")" type="text/javascript"></script>
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 
 @link(newPage:Int, newSortBy:String) = @{
     
