--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -183,4 +183,7 @@ ul{list-style-type:none;}
 div, ul, h1, h2, h3, li, p, img{margin:0; padding:0;}
 ul{list-style-type:none;}
 
-
+div.giveSearch {
+	text-align:center!important;
+	margin-left:437;
+}
