--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -569,10 +569,14 @@ pre {
  * ------------------------------------------------------------- */
 form {
   margin-bottom: 18px;
+  margin-left: auto;
+  margin-right: auto;
 }
 fieldset {
   margin-bottom: 18px;
   padding-top: 18px;
+  margin-left: auto;
+  margin-right: auto;
 }
 fieldset legend {
   display: block;
