--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -11,8 +11,8 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/forms.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
@@ -32,6 +32,10 @@
 </script>
     </head>
     <body>
+    <div class="container">
+<div class="content">    
+    <div class="row">
+                    <div class="span7">
        @helper.form(action = routes.NeedForm.submit, '_id -> "myForm") {
             
 		<input type="hidden" name="location" id="location" />
@@ -91,15 +95,18 @@
 				</div>
 			</div>
                 
-        </fieldset>
         
-        <div class="actions">
+        <div class="actionsNeed">
             <input type="submit" class="btn primary" value="I need help">
             <a href="@routes.Application.index" class="btn">Cancel</a>
         </div>
+        </fieldset>
         
     }
-  
+      </div>
+  </div>
+</div>  
+</div>
     </body>
 </html>
 
