--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -64,7 +64,7 @@
  
 			@inputText(
                 needForm("endDate"),
-                '_label -> "* Last day active",
+                '_label -> "Last day active",
                 '_help -> "Please give a date in the future.",
                 'id -> "datepicker",
                 '_error -> needForm.globalError
