--- a/app/views/giveList.scala.html
+++ b/app/views/giveList.scala.html
@@ -66,7 +66,7 @@
                 @for(give <- currentPage.getList) {
                     <tr>
                         <td>
-                            <b>@give.getName</b><br/>
+                            <b>I give: @give.getName</b><br/>
                             @if(give.getType.name == "PAID") {
                             	I want to get paid.<br/>
                             } else {
