--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,6 +5,14 @@ body {
     padding-top: 0; /* 40px to make the container go all the way to the bottom of the topbar */
 }
 div, ul, h1, h2, h3, li, p, img{margin:0; padding:0;}
+div.giveSearch {
+	margin-left:437;
+	
+}
+div.giveSearch ul li{
+	background:url(../images/symbol2.gif) 0 8px no-repeat;
+	padding:0 0 0 30px;
+}
 ul{list-style-type:none;}
 
 
@@ -183,7 +191,3 @@ ul{list-style-type:none;}
 div, ul, h1, h2, h3, li, p, img{margin:0; padding:0;}
 ul{list-style-type:none;}
 
-div.giveSearch {
-	text-align:center!important;
-	margin-left:437;
-}
