--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #eee;
+    background-color: #fff;
 }
 body {
     padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
