--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 <div id="banner">
-	<div class=bannerBG>
+	<div class=bannerBG onclick="window.location='/'" onmouseover="" style="cursor: pointer;">
 	</div>
 
 	@content
