--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -34,7 +34,7 @@
     </head>
     <body>
     <div id="banner">
-		<div class=bannerBG>
+		<div class=bannerBG onclick="window.location='/'" onmouseover="" style="cursor: pointer;">
 	</div>
     <div class="container">
 <div class="content">    
