--- a/app/views/give/formGive.scala.html
+++ b/app/views/give/formGive.scala.html
@@ -31,7 +31,7 @@
     </head>
     <body>
     <div id="banner">
-		<div class=bannerBG>
+		<div class=bannerBG onclick="window.location='/'" onmouseover="" style="cursor: pointer"/>
 	</div>
     
         <div class="container">
