--- a/app/views/needList.scala.html
+++ b/app/views/needList.scala.html
@@ -86,34 +86,24 @@
                <br/></li> }
 </ul>
 
+        <br/>
         <div id="pagination" class="pagination">
-            <ul>
                 @if(currentPage.hasPrev) {
-                    <li class="prev">
                         <a href="@link(currentPage.getPageIndex - 1, null)">&larr; Previous</a>
-                    </li>
                 } else {
-                    <li class="prev disabled">
                         <a>&larr; Previous</a>
-                    </li>
                 }
-                <li class="current">
-                    <a>Displaying @currentPage.getDisplayXtoYofZ</a>
-                </li>
+                    <a>[ Displaying @currentPage.getDisplayXtoYofZ ]</a>
                 @if(currentPage.hasNext) {
-                    <li class="next">
                         <a href="@link(currentPage.getPageIndex + 1, null)">Next &rarr;</a>
-                    </li>
                 } else {
-                    <li class="next disabled">
                         <a>Next &rarr;</a>
-                    </li>
                 }
-            </ul>
         </div>
+
         
     }
         
 }
 </div>
-            
+            <br/>
