--- a/app/views/give/formGive.scala.html
+++ b/app/views/give/formGive.scala.html
@@ -7,7 +7,7 @@
 
 
 <!DOCTYPE html>
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <html>
     <head>
         <title>@title</title>
