--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -7,10 +7,11 @@
 
 
 <!DOCTYPE html>	
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <html>
     <head>
         <title>@title</title>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/forms.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
@@ -20,7 +21,6 @@
     	<script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
     	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
     	<script src="@routes.Assets.at("javascripts/location.js")" type="text/javascript"></script>
-    	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 
 <script>
 	$(function() {
@@ -33,9 +33,7 @@
 </script>
     </head>
     <body>
-    <div id="banner">
-		<div class=bannerBG onclick="window.location='/'" onmouseover="" style="cursor: pointer;">
-	</div>
+    
     <div class="container">
 <div class="content">    
     <div class="row">
