--- a/app/views/need/formNeed.scala.html
+++ b/app/views/need/formNeed.scala.html
@@ -21,7 +21,7 @@
     	<script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
     	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
     	<script src="@routes.Assets.at("javascripts/location.js")" type="text/javascript"></script>
-
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 <script>
 	$(function() {
 		$( "#datepicker" ).datepicker();
@@ -33,6 +33,9 @@
 </script>
     </head>
     <body>
+     <div id="banner">
+		<div class=bannerBG onclick="window.location='/'" onmouseover="" style="cursor: pointer"/>
+	</div>
     
     <div class="container">
 <div class="content">    
